backend fix chnages and run tests
